<resources>
    <string name="app_name">Tus tareas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- General -->
    <string name="cargando">Cargando</string>
    <string name="error_navegar">Ha habido un error al navegar</string>
    <string name="lupa">lupa</string>
    <string name="buscar_por_titulo_descripci_n_y_etiqueta">Buscar por titulo, descripción y
        etiqueta</string>
    <string name="error_modificar_checkbox">Ha habido un error al modificar la tarea</string>
    <string name="tres_barras">tres barras</string>
    <string name="anadir">+</string>
    <string name="taza">taza</string>
    <string name="nombreRequerido">Nombre*</string>
    <string name="descripcion">Descripcion</string>
    <string name="xx_xx_xxxx">XX/XX/XXXX</string>
    <string name="guardar">Guardar</string>
    <string name="descartar">Descartar</string>
    <string name="continuar">Continuar</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="fecha_creacion">fecha creacion</string>
    <string name="calendario">calendario</string>
    <string name="etiqueta">etiqueta</string>
    <string name="titulo">titulo</string>
    <string name="fecha_inicio">fecha inicio</string>
    <string name="fecha_fin">fecha fin</string>
    <string name="tareas">tareas</string>
    <string name="no_existen_etiquetas">No existen etiquetas</string>
    <string name="inicio">Inicio</string>
    <string name="prevencion_fallo_critico">Se ha detectado un fallo crítico</string>


    <!-- Inicio -->
    <string name="ver_mas">Ver más</string>
    <string name="no_hay_tareas_para_hoy">No hay tareas pendientes para hoy</string>
    <string name="tienes_una_tarea_para_hoy">Tienes 1 tarea pendiente para hoy</string>
    <string name="tienes_tareas_para_hoy">Tienes %1$d tareas pendientes para hoy</string>
    <string name="no_hay_tareas_retrasadas">No hay tareas retrasadas</string>
    <string name="tienes_una_tarea_retrasada">Tienes 1 tarea retrasada</string>
    <string name="tienes_tareas_retrasadas">Tienes %1$d tareas retrasadas</string>
    <string name="no_hay_tareas_proximas">No hay tareas próximas</string>
    <string name="tienes_una_tarea_proxima">Tienes 1 tarea próxima</string>
    <string name="tienes_tareas_proximas">Tienes %1$d tareas próximas</string>
    <string name="eliminar_simbolo">-</string>

    <!-- Ver más -->


    <!-- Listar tareas -->
    <string name="estado">Estado</string>
    <string name="prioridad">Prioridad</string>
    <string name="todav_a_no_ha_creado_tareas_no_no_se_ajustan_al_filtro_aplicado">Todavía no ha
        creado tareas\no no se ajustan al filtro aplicado</string>


    <!-- Estado -->
    <string name="en_tiempo">En tiempo</string>
    <string name="retrasada">Retrasada</string>
    <string name="completada">Completada</string>

    <!-- Prioridad -->
    <string name="baja">Baja</string>
    <string name="media">Media</string>
    <string name="alta">Alta</string>
    <string name="no_establecido">No establecido</string>

    <!-- Modificar tareas -->
    <string name="error_guardar_tarea">Ha habido un error al guardar\nla nueva tarea</string>
    <string name="error_modificar_tarea">Ha habido un error al guardar\nla modificación</string>
    <string name="confirmar_guardar_tarea">Está seguro de guardar la tarea</string>
    <string name="confirmar_modificado_tarea">Está seguro de los cambios</string>
    <string name="fecha_limite">Fecha límite</string>

    <!-- Tarea detalles -->
    <string name="error_eliminar_tarea">Ha habido un error al intentar\nborrar la tarea</string>
    <string name="confirmar_eliminar_tarea">Desea eliminar esta tarea</string>

    <!-- Listar proyectos -->
    <string name="todav_a_no_ha_creado_proyectos_no_no_se_ajustan_al_filtro_aplicado">Todavía no ha
        creado proyectos\no no se ajustan al filtro aplicado</string>
    <string name="primero_va_fin_despues_inicio">Primero va fin despues inicio</string>
    <string name="fin">Fin</string>
    <string name="ascendente">Ascendente</string>
    <string name="descendente">Descendente</string>

    <!-- Modificar proyectos -->
    <string name="error_modificar_proyecto">Ha habido un error al guardar\nla modificación</string>
    <string name="confirmar_modificar_proyecto">Está seguro de los cambios</string>
    <string name="error_guardar_proyecto">Ha habido un error al guardar\nel nuevo proyecto</string>
    <string name="confirmar_guardar_proyecto">Está seguro de guardar los proyectos</string>
    <string name="no_existen_tareas">No existen tareas</string>

    <!-- Proyecto detalles -->
    <string name="error_eliminar_proyecto">Ha habido un error al intentar\nborrar el proyecto</string>
    <string name="confirmar_eliminar_proyecto">Desea eliminar este proyecto</string>
    <string name="aviso_confirmar_eliminar_proyecto">Nota: las tareas no serán borradas</string>


    <!-- Estadisticas -->
    <string name="progreso_semanal">Progreso semanal</string>
    <string name="tareas_completadas_vs_pendientes">Tareas completadas vs pendientes</string>
    <string name="completas">Completas</string>
    <string name="pendiente">Pendiente</string>
    <string name="retrasadas">Retrasadas</string>
    <string name="actividad_semanal">Actividad Semanal</string>
    <string-array name="dias_semana_siglas">
        <item>L</item>
        <item>M</item>
        <item>X</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
        <item>D</item>
    </string-array>

    <!-- Ajustes -->
    <string name="apariencia">Apariencia</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="predeterminados_del_sistema">Predeterminados del sistema</string>
    <string name="idioma">Idioma</string>

    <string-array name="idiomas">
        <item>Sistema</item>
        <item>Español</item>
        <item>Italiano</item>
        <item>Francés</item>
        <item>Alemán</item>
        <item>Portugués</item>
        <item>Inglés</item>
        <item>Gallego</item>
    </string-array>
    <string name="buscar_actualizaci_n">Buscar Actualización</string>

    <!-- Lista etiquetas presentes -->
    <string name="etiqueta_eliminada">Etiqueta eliminada</string>


    <!-- Lista tareas presentes -->
    <string name="tarea_eliminada">Tarea eliminada</string>

    <!-- Listar etiquetas -->
    <string name="buscar_por_titulo_y_descripci_n">Buscar por titulo y descripción</string>
    <string name="todav_a_no_ha_creado_etiqueta_n_o_no_se_ajustan_al_filtro_aplicado">Todavía no ha
        creado etiqueta \n o no se ajustan al filtro aplicado</string>

    <!-- Etiqueta detalles -->
    <string name="error_eliminar_etiqueta">Ha habido un error al intentar\nborrar la etiqueta</string>
    <string name="confirmar_eliminar_etiqueta">Desea eliminar esta etiqueta</string>

    <!-- Modificar etiquetas -->
    <string name="error_modificar_etiqueta">Ha habido un error al guardar\nla modificación</string>
    <string name="confirmar_modificar_etiqueta">Está seguro de los cambios</string>
    <string name="error_guardar_etiqueta">Ha habido un error al guardar\nla nueva etiqueta</string>
    <string name="confirmar_guardar_etiqueta">Estas seguro de guardar la etiqueta</string>

    <!-- Activity main -->
    <string name="error_eliminando_tareas">Lo sentimos ha habido un\nerror eliminando las tareas</string>


    <!-- Soporte idiomas en menu -->
    <string name="proyectos">Proyectos</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="fecha_creaci_n_asc">fecha creación asc</string>
    <string name="fecha_creaci_n_des">fecha creación des</string>
    <string name="fecha_l_mite_asc">fecha límite asc</string>
    <string name="fecha_l_mite_des">fecha límite des</string>
    <string name="editar">editar</string>
    <string name="ajustes">Ajustes</string>
    <string name="gestionar_etiquetas">Gestionar etiquetas</string>
    <string name="limpiar_tareas_comp">Limpiar tareas Comp.</string>

    <!-- Activity error no previsto -->
    <string name="cerrar_aplicacion">Cerrar aplicación</string>
    <string name="error_no_previsto">"Ha habido el siguiente error no previsto/irreversible \n"</string>
    <string name="mensaje_error_activity">Publique la incidencia con el error que sale en la ventana
        inferior en la plataforma, para que podamos solucionarlo lo antes posible. Además, si
        considera necesario puede indicar los casos de como reproducir el errro.</string>
</resources>