<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_editar_etiqueta"
        android:title="@string/editar"
        app:showAsAction="always"
        android:icon="@drawable/editar"
        />
    <item
        android:id="@+id/action_eliminar_etiqueta"
        android:title="@string/eliminar"
        app:showAsAction="always"
        android:icon="@drawable/eliminar"
        />
    <item
        android:id="@+id/ajustesFragment"
        android:title="@string/ajustes"
        />
    <item
        android:id="@+id/listarEtiquetasFragment"
        android:title="@string/gestionar_etiquetas"
        />
    <item
        android:id="@+id/action_limpiar_tareas_completas"
        android:title="@string/limpiar_tareas_comp"
        />
</menu>