<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragmentos.ListarEtiquetasFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeWidth="1dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/lupa"
                android:src="@drawable/lupa"
            />
            <EditText
                android:id="@+id/filtro"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:autofillHints="tarea 1"
                android:hint="@string/buscar_por_titulo_y_descripci_n"
                android:layout_marginEnd="15dp"
                android:inputType="text"
                android:textSize="14sp"
                android:textColorHint="@color/black"
            />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:id="@+id/sinResultados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/taza"
            android:src="@drawable/taza"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todav_a_no_ha_creado_etiqueta_n_o_no_se_ajustan_al_filtro_aplicado"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaEtiquetas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/anadirEtiqueta"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/black"
            android:text="@string/anadir"
            android:textSize="50sp"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            />
    </LinearLayout>


</LinearLayout>