<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragmentos.VerMasFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/lupa"
                android:contentDescription="@string/lupa"
                />
            <EditText
                android:id="@+id/filtro"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:autofillHints="importante, tarea 1, tarea para dentro de 1 semana"
                android:hint="@string/buscar_por_titulo_descripci_n_y_etiqueta"
                android:layout_marginEnd="15dp"
                android:inputType="text"
                android:textSize="14sp"
                android:textColorHint="@color/black"
                android:background="@null"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/sinResultados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/taza"
            android:src="@drawable/taza"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todav_a_no_ha_creado_tareas_no_no_se_ajustan_al_filtro_aplicado"
            android:textAlignment="center"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaTareasConCondicionesEnOrigen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>