<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragmentos.TareaDetallesFragment"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tituloTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/titulo"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descripcion"
                android:src="@drawable/descripcion"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/descipcionTarea"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/temporal"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fecha_creacion"
                android:src="@drawable/fecha_cracion"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/fechaCreacionTarea"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/temporal"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fecha_limite"
                android:src="@drawable/fecha_limite"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/fechaLimiteTarea"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/temporal"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prioridad"
                android:src="@drawable/prioridad"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/prioridadTarea"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/temporal"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/estado"
                android:src="@drawable/estado"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/estadoTarea"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/temporal"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/etiqueta"
                android:src="@drawable/etiqueta"
                android:layout_marginEnd="10dp"
                />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/etiquetasTareaGroup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="8dp"
                app:chipSpacingVertical="4dp"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>